--- a/practica 3/maquetado1/style.css
+++ b/practica 3/maquetado1/style.css
@@ -18,6 +18,12 @@ h1{
     border-radius: 20px;
     font-weight: bold;
     background-color: #eeecf146;
+    font-family: Impact, Charcoal, sans-serif;
+    font-size: 25px;
+    letter-spacing: 2px;    
+    word-spacing: 2px;
+    color: #000000; 
+    font-weight: normal;
 
 }
 h2{
@@ -33,8 +39,16 @@ h2{
     border-radius: 20px;
     font-weight: bold;
     background-color: #eeecf146;
+    font-family: Impact, Charcoal, sans-serif;
+    font-size: 25px;
+    letter-spacing: 2px;    
+    word-spacing: 2px;
+    color: #000000; 
+    font-weight: normal;
 
 }
+
+
 .datosPersonales
 {
     margin-bottom: 12px;
@@ -115,7 +129,7 @@ h2{
     border-radius: 20px;
     font-weight: bold;
     bottom: 255px;
-    background-color: #eeecf146;
+    background-color: #eeecf17f;
 
 
 }
@@ -126,7 +140,7 @@ legend{
     font-weight: bold;
 }
 .box {
-    background-color: #eeecf146;
+    background-color: #ffffff7a;
     float: left;
     display: flex;
     align-items: center;
